--- a/public/css/heatzone.css
+++ b/public/css/heatzone.css
@@ -173,3 +173,27 @@
     top:42px;
     right:83px;
 }
+#selected-pitch-ball-path{
+    position: absolute;
+    height: 180px;
+    width: 50px;
+    right: 22px;
+    bottom: -73px;
+}
+#selected-pitch-ball-path div{
+    border-right: 2px solid black;
+    border-radius: 50%;
+    height: 50%;
+    width: 50%;
+    left: 10px;
+    position: absolute;
+}
+#selected-pitch-ball-distance{
+    position: absolute;
+    height: 40px;
+    width: 55px;
+    right: 22px;
+    bottom: 39px;
+    font-weight: bold;
+    text-align: center;
+}
