--- a/public/views/reports-batter-heat-zone.html
+++ b/public/views/reports-batter-heat-zone.html
@@ -148,6 +148,13 @@
                 <div id="selected-pitch-man-on-first" class="selected-pitch-man-on" ng-class="{'active' : rctrl.selectedPitch.man_on_first == '1'}"></div>
                 <div id="selected-pitch-man-on-second" class="selected-pitch-man-on" ng-class="{'active' : rctrl.selectedPitch.man_on_second == '1'}"></div>
                 <div id="selected-pitch-man-on-third" class="selected-pitch-man-on" ng-class="{'active' : rctrl.selectedPitch.man_on_third == '1'}"></div>
+                <div id="selected-pitch-ball-path" ng-show="rctrl.selectedPitch.batted_ball_angle != 0"
+                style="-ms-transform: rotate({{rctrl.selectedPitch.batted_ball_angle}}deg);
+                    -webkit-transform: rotate({{rctrl.selectedPitch.batted_ball_angle}}deg);
+                    transform: rotate({{rctrl.selectedPitch.batted_ball_angle}}deg);">
+                    <div></div>
+                </div>
+                <div id="selected-pitch-ball-distance" ng-show="rctrl.selectedPitch.batted_ball_distance != 0">Distance:<br>{{rctrl.selectedPitch.batted_ball_distance | number:0}}ft</div>
             </div>
         </div>
         <div class="card-body heat-zone-card">
