--- a/public/views/player-detail.html
+++ b/public/views/player-detail.html
@@ -12,6 +12,7 @@
                     <li ng-show="(',' + pctrl.player.positions + ',').indexOf(',C,') > -1"><i class="zmdi zmdi-info-outline"></i><a href="/#/reports/catcher-framing">Catcher Framing</a></li>
                     <li ng-show="(',' + pctrl.player.positions + ',').indexOf(',P,') > -1"><i class="zmdi zmdi-info-outline"></i><a href="/#/reports/velocity-diff">Velocity Difference</a></li>
                     <li ng-show="pctrl.player.battedballdistancebymonth && pctrl.player.battedballdistancebymonth.length > 0"><i class="zmdi zmdi-info-outline"></i><a href="/#/reports/battedballdistance/{{ pctrl.player.id }}">Batted Ball Distance</a></li>
+                    <li><i class="zmdi zmdi-info-outline"></i><a href="/#/reports/heat-zone">Heat Zone</a></li>
                 </ul>
             </div>
         </div>
