Implement 'Show All' buttons on Heat Zone Report

--- a/public/template/sidebar-left.html
+++ b/public/template/sidebar-left.html
@@ -13,7 +13,7 @@
             <ul>
                 <li><a data-ui-sref-active="active" data-ui-sref="reports.catcher-framing" data-ng-click="mactrl.sidebarStat($event)">Catcher Framing</a></li>
                 <li><a data-ui-sref-active="active" data-ui-sref="reports.velocity-diff" data-ng-click="mactrl.sidebarStat($event)">Pitcher Velocity Difference</a></li>
-                <li><a data-ui-sref-active="active" data-ui-sref="reports.heat-zone" data-ng-click="mactrl.sidebarStat($event)">Batter Heat Zone</a></li>
+                <li><a data-ui-sref-active="active" data-ui-sref="reports.heat-zone" data-ng-click="mactrl.sidebarStat($event)">Heat Zone</a></li>
             </ul>
         </li>
     </ul>
