--- a/public/views/reports-batter-heat-zone.html
+++ b/public/views/reports-batter-heat-zone.html
@@ -6,12 +6,21 @@
         <div class="card-body card-padding">
             <div>
                 <div class="row">
-                    <div class="col-md-4">
+                    <div class="col-md-2">
                         Select a pitcher<br><select id="select-pitcher" ng-model="rctrl.filters.selectedPitcher" style="width:150px"></select>
+                        
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-2">
+                        <br>
+                        <div class="btn btn-default btn-sm" ng-click="rctrl.resetPitcher()" ng-show="rctrl.filters.selectedPitcher != 0">All Pitchers</div>
+                    </div>
+                    <div class="col-md-2">
                         Select a batter<br>
                         <select id="select-batter" ng-model="rctrl.filters.selectedBatter" style="width:150px"></select>
+                    </div>
+                    <div class="col-md-2">
+                        <br>
+                        <div class="btn btn-default btn-sm" ng-click="rctrl.resetBatter()" ng-show="rctrl.filters.selectedBatter != 0">All Batters</div>
                     </div>
                 </div>
                 <div class="row">
@@ -82,8 +91,8 @@
                 </div>
             </div>
         </div>
-        <div ng-show="rctrl.dataPoints.length == 0" id="no-results">No Results</div>
-        <div ng-show="rctrl.dataPoints.length == 1000" id="truncated">The data was truncated at 1000 pitches</div>
+        <div ng-show="rctrl.dataPoints.length == 0 && !rctrl.runningReport" id="no-results">No Results</div>
+        <div ng-show="rctrl.dataPoints.length == 1000" id="truncated">Results are limited to the first 1000 pitches</div>
         <div ng-show="rctrl.selectedPitch" id="selected-pitch-container">
             <div id="selected-pitch" ng-class="{'in-play' : rctrl.selectedPitch.atbat_desc != '', 'strike' : rctrl.selectedPitch.strike == '1', 'ball' : rctrl.selectedPitch.ball == '1'}">
                 <div class="selected-pitch-game-info">
@@ -136,7 +145,7 @@
                         </tr>
                         <tr>
                             <td>Result:</td>
-                            <td>{{rctrl.selectedPitch.pitch_desc}} - {{rctrl.selectedPitch.pa_desc}}</td>
+                            <td>{{rctrl.selectedPitch.pa_desc == "" ? rctrl.selectedPitch.pitch_desc : rctrl.selectedPitch.pa_desc}}</td>
                         </tr>
                         <tr>
                             <td colspan="2"><div class="btn btn-primary" ng-click="rctrl.viewAB(rctrl.selectedPitch.abslug)" ng-show="rctrl.view != 'ab'">View PA</div></td>
