Make the Heat Zone URL accept a player_id parameter, and remove it from 'Reports'

--- a/public/css/heatzone.css
+++ b/public/css/heatzone.css
@@ -204,6 +204,7 @@
     text-align: center;
 }
 
-span.ui-select-match-text{
-    margin-top:7px;
+.ui-select-toggle{
+    text-transform: none !important;
+    padding-top: 7px !important;
 }
