--- a/public/template/sidebar-left.html
+++ b/public/template/sidebar-left.html
@@ -7,13 +7,13 @@
         <li data-ng-class="{ 'active toggled': mactrl.$state.includes('players') }">
             <a data-ui-sref="players.list" data-ng-click="mactrl.sidebarStat($event)"><i class="zmdi zmdi-view-list"></i> Players</a>
         </li>
+        <li><a data-ui-sref-active="active" href="#/heat-zone/"><i class="zmdi zmdi-fire"></i> Heat Zone</a></li>
         <li class="sub-menu" data-ng-class="{ 'active toggled': mactrl.$state.includes('reports') }">
             <a href="" toggle-submenu><i class="zmdi zmdi-collection-text"></i> Reports</a>
 
             <ul>
                 <li><a data-ui-sref-active="active" data-ui-sref="reports.catcher-framing" data-ng-click="mactrl.sidebarStat($event)">Catcher Framing</a></li>
                 <li><a data-ui-sref-active="active" data-ui-sref="reports.velocity-diff" data-ng-click="mactrl.sidebarStat($event)">Pitcher Velocity Difference</a></li>
-                <li><a data-ui-sref-active="active" data-ui-sref="reports.heat-zone" data-ng-click="mactrl.sidebarStat($event)">Heat Zone</a></li>
             </ul>
         </li>
     </ul>
