--- a/public/views/dashboard.html
+++ b/public/views/dashboard.html
@@ -32,7 +32,11 @@
                     </div>
                 </div>
                 <div class="col-sm-6">
-                    <!-- Recent Items -->
+                    <div class="card">
+                        <div class="card-header btn" style="width:100%">
+                            <a href="#/heat-zone/"><h2>Heat Zone</h2></a>
+                        </div>
+                    </div>
                     <div class="card">
                         <div class="card-header">
                             <h2>Reports</h2>
