--- a/public/template/footer.html
+++ b/public/template/footer.html
@@ -2,5 +2,6 @@ Made by Cory Martin - Jan, 2016
 
 <ul class="f-menu">
     <li><a href="/#/">Home</a></li>
-    <li><a href="mailto:murribu@gmail.com">Contact</a></li>
+    <li><a href="https://github.com/murribu/trumedia">Github</a></li>
+    <li><a href="https://twitter.com/murribu">Contact</a></li>
 </ul>
